Fix overflow/height issues with sticky nav bar

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -319,9 +319,9 @@ i.icon-pdf {
     position: fixed;
     top: 0;
     width: 100%;
-    height: 50px;
+    height: 0px;
     opacity: 0;
-    // overflow: hidden;
+    overflow: hidden;
 
     #sticky-navbar {
         max-width: 940px;
@@ -398,8 +398,9 @@ i.icon-pdf {
 
     .sticky-header & {
         opacity: 1;
-        // height: 50px;
+        height: 50px;
         z-index: 1;
+        overflow: visible;
     }
 
 
